[project]
name = "kentokit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael", email = "raphael.vienne@live.fr" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
kentokit = "kentokit:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
