[project]
name = "kentokit"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael", email = "raphael.vienne@live.fr" }
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Source = "https://github.com/vienneraphael/kentokit"
Issues = "https://github.com/vienneraphael/kentokit/issues"

[project.scripts]
kentokit = "kentokit:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
    "prek>=0.3.4",
]
